# markflow

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  rust-toolchain.toml  vite.config.ts
.github/workflows/: release.yml
docs/: CODE_SIGNING.md  PORTABLE.md
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AIPanel.tsx  AISettings.tsx  App.tsx  AppSettings.tsx  ContextMenu.tsx  Editor.tsx  FileTree.tsx  FileTreeNode.tsx  MilkdownownTheme.css  Preview.tsx  PromptDialog.tsx  QuickSwitch.tsx  SearchBar.tsx  SelectionToolbar.tsx  StatusBar.tsx  Toolbar.tsx  Welcome.tsx  WysiwygEditor.tsx  fileTreeActions.tsx
src/hooks/: fileSystemLogic.ts  useAI.ts  useAppLifecycle.ts  useDragDrop.ts  useFileSystem.ts  useRecentFiles.ts  useRecentWorkspaces.ts  useSession.ts  useWorkspace.ts  useZoom.ts
src/types/: editorSearch.ts  markdown-it-plugins.d.ts  tabState.ts
src/utils/: export.ts  image.ts  markdown.ts  proseSearch.ts  textSearch.ts
tests/: README.md  commonmark-spec.md  edge-cases.md  filesystem-logic.test.cjs  gfm-extensions.md  md-config.cjs  run-spec-tests.cjs  run-tests.cjs  untitled-recovery.test.cjs
